@@ -10,6 +10,10 @@ What's New in Stackless 3.X.X?
 *Release date: 20XX-XX-XX*
 
 - https://github.com/stackless-dev/stackless/issues/221
+  Fix a bug that could cause an assertion failure and a reference leak during
+  the termination of a main-tasklet, if an application embeds Stackless Python.
+
+- https://github.com/stackless-dev/stackless/issues/221
   Change the width of C-stack serial numbers to 64bit. This prevents overflows
   in long running applications with an embedded Stackless Python.
   This change affects internal Stackless C structures PyStacklessState and
